--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio Guiado</title>
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-	
+	<div class="text-center">
+		<label for="url">Ingresa la URL de la imagen: </label>
+		<input id="url" type="text" >
+	</div>
+	<section id="contenedor" class="text-center"></section>
+	<script src="assets/js/app.js"></script>
 </body>
 </html>
